* Prevent slideshow from jumping and add a loading animation.

--- a/css/onato.css
+++ b/css/onato.css
@@ -57,3 +57,21 @@
   width: 100%;
   height: 100%;
 }
+
+
+.slideshow {
+  position: relative;
+  padding-bottom: 48% !important; /* 16:9 */
+  height: 0;
+  background-image:url("../images/loading.gif");
+  background-repeat:no-repeat;
+  background-attachment:fixed;
+  background-position:center 40%;
+}
+.slideshow .flexslider {
+  width: 100%;
+  height: 100%;
+}
+
+
+
